--- a/resource/css/game.css
+++ b/resource/css/game.css
@@ -8,65 +8,52 @@
 }
 
 #cardContainer li {
-    
-    /* using CSS3 Transitions with all vendors prefixes */
-    /* for IE10, Chrome & Safari, Firefox, Opera */
-    -ms-transition-property: all;
-    -ms-transition-duration: .4s;
-    -ms-transition-timing-function: ease;
-    -webkit-transition-property: all;
-    -webkit-transition-duration: .4s;
-    -webkit-transition-timing-function: ease;
-    -moz-transition-property: all;
-    -moz-transition-duration: .4s;
-    -moz-transition-timing-function: ease;
-    -o-transition-property: all;
-    -o-transition-duration: .4s;
-    -o-transition-timing-function: ease;
-    
-    transition-property: all;
-    transition-duration: .4s;
-    
-    -ms-backface-visibility: visible;
-    -ms-transform-origin: 50% 50%;
-    -webkit-backface-visibility: visible;
-    -webkit-transform-origin-x: 50%;
-    -webkit-transform-origin-y: 50%;
-    -moz-backface-visibility: visible;
-    -moz-transform-origin: 50% 50%;
-
-    backface-visibility: visible;
-    transform-origin: 50% 50%;
     width: 99px;
-    height: 99px;
+    height: 99px;    
     list-style: none;
     float:left;
+    cursor: pointer;
     background: url('../images/contrary.png') no-repeat;    
     margin-right: 18px;
-    margin-top: 19px;
-
+    margin-top: 19px;    
+    -webkit-perspective: 500;
+    -moz-perspective: 500;
+    -ms-perspective: 500;
+    perspective: 500;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;    
 }
 
-.moveRotation
+.moveLeftRotation
 {
-    -ms-transform: perspective(500px) rotateY(180deg) scale(1);
-    -webkit-transform: perspective(500px) rotateY(180deg) scale(1);
-    -moz-transform: perspective(500px) rotateY(180deg) scale(1);
-    -o-transform: scale(1);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 
 .moveRightRotation {
-     -ms-transform: perspective(500px) rotateY(-180deg) scale(1);
-    -webkit-transform: perspective(500px) rotateY(-180deg) scale(1);
-    -moz-transform: perspective(500px) rotateY(-180deg) scale(1);
-    -o-transform: scale(1);       
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);   
 }
 
 .initialRotation {
-    -ms-transform: perspective(500px) rotateY(0deg) scale(1);
-    -webkit-transform: perspective(500px) rotateY(0deg) scale(1);
-    -moz-transform: perspective(500px) rotateY(0deg) scale(1);
-    -o-transform: scale(1);
+    -webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
+    transform: rotateY(0deg);
 }
 
 #music_control {
@@ -74,6 +61,7 @@
     height: 74px;
     position: absolute;
     visibility: hidden;
+    cursor: pointer;
 }
 
 #music_control.musicopen  {
@@ -90,4 +78,5 @@
     background: url('../images/refresh.png') no-repeat;
     visibility: hidden;
     position: absolute;
+    cursor: pointer;
 }
